Fix overflowing availability number
Resolves #1363

--- a/app/assets/stylesheets/catalog/_index.css.scss
+++ b/app/assets/stylesheets/catalog/_index.css.scss
@@ -38,6 +38,11 @@
   margin-bottom: 19px;
 }
 
+.availability-num {
+  @include giant-number;
+  text-align: center;
+}
+
 .caption_cat { padding: 0px 9px 0px 9px; }
 
 a.not-qualified-icon {
